--- a/app/src/main/res/layout/detailview.xml
+++ b/app/src/main/res/layout/detailview.xml
@@ -79,7 +79,7 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="5dp"
+            android:paddingEnd="5dp"
             android:text="@string/releaseDate"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
