1) Material theme was customised. 2) Added feature: change background color. 3) Added feature: color by hydrophobic aa property. 4) Minor refactoring.

--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -124,6 +124,25 @@
                 <item
                     android:id="@+id/BFactor"
                     android:title="@string/ByBFactor" />
+                <item
+                    android:id="@+id/Hydrophobicity"
+                    android:title="@string/hydrophobicity" />
+            </group>
+        </menu>
+    </item>
+
+    <item android:title="@string/background">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/bgBlack"
+                    android:title="@string/black" />
+                <item
+                    android:id="@+id/bgWhite"
+                    android:title="@string/white" />
+                <item
+                    android:id="@+id/bgGray"
+                    android:title="@string/gray" />
             </group>
         </menu>
     </item>
